// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Searching should match the snapshot when loaded 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Searching
    fetchImages={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    loading={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "basic": true,
      "children": Array [
        <Message
          color="teal"
        >
          <MessageHeader>
            Searching Twitter for your results.
          </MessageHeader>
        </Message>,
        null,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <MessageHeader>
            Searching Twitter for your results.
          </MessageHeader>,
          "color": "teal",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Searching Twitter for your results.",
          },
          "ref": null,
          "rendered": "Searching Twitter for your results.",
          "type": [Function],
        },
        "type": [Function],
      },
      null,
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "basic": true,
        "children": Array [
          <Message
            color="teal"
          >
            <MessageHeader>
              Searching Twitter for your results.
            </MessageHeader>
          </Message>,
          null,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <MessageHeader>
              Searching Twitter for your results.
            </MessageHeader>,
            "color": "teal",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Searching Twitter for your results.",
            },
            "ref": null,
            "rendered": "Searching Twitter for your results.",
            "type": [Function],
          },
          "type": [Function],
        },
        null,
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Searching should match the snapshot when loading 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Searching
    fetchImages={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
      }
    }
    loading={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "basic": true,
      "children": Array [
        <Message
          color="teal"
        >
          <MessageHeader>
            Searching Twitter for your results.
          </MessageHeader>
        </Message>,
        <Loader
          active={true}
          inline="centered"
          size="huge"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <MessageHeader>
            Searching Twitter for your results.
          </MessageHeader>,
          "color": "teal",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Searching Twitter for your results.",
          },
          "ref": null,
          "rendered": "Searching Twitter for your results.",
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "active": true,
          "inline": "centered",
          "size": "huge",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "basic": true,
        "children": Array [
          <Message
            color="teal"
          >
            <MessageHeader>
              Searching Twitter for your results.
            </MessageHeader>
          </Message>,
          <Loader
            active={true}
            inline="centered"
            size="huge"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <MessageHeader>
              Searching Twitter for your results.
            </MessageHeader>,
            "color": "teal",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Searching Twitter for your results.",
            },
            "ref": null,
            "rendered": "Searching Twitter for your results.",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "active": true,
            "inline": "centered",
            "size": "huge",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
